<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/layoutDilutions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="20dp"
            app:background="@{``}">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#fff"
                android:textSize="30sp"
                tools:text="Contaminant" />

            <TextView
                android:id="@+id/textDilution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:paddingBottom="20dp"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/noDilution" />

            <TextView
                android:id="@+id/textSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectDilution"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonNoDilution"
            style="@style/Button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:minHeight="70dp"
            android:minWidth="260dp"
            android:text="@string/noDilution"
            android:theme="?primaryButtonStyle" />

        <Button
            android:id="@+id/buttonDilution1"
            style="@style/Button"
            android:layout_marginBottom="10dp"
            android:minHeight="70dp"
            android:minWidth="260dp"
            android:text="@string/timesDilution"
            android:theme="?primaryButtonStyle" />

        <Button
            android:id="@+id/buttonDilution2"
            style="@style/Button"
            android:layout_marginBottom="10dp"
            android:minHeight="70dp"
            android:minWidth="260dp"
            android:text="@string/timesDilution"
            android:theme="?primaryButtonStyle" />

        <Button
            android:id="@+id/buttonCustomDilution"
            style="@style/Button"
            android:minHeight="70dp"
            android:minWidth="260dp"
            android:text="@string/customDilution"
            android:theme="?primaryButtonStyle" />

    </LinearLayout>

</layout>

