...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-1dp"
                android:orientation="vertical">

                <Button
...
                    android:text="@string/coliformCount"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonCalibrate"
                    style="?listButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onCalibrateClick"
...
